// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExerciseView golden render > renders arrange from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Tippe die Teile in der richtigen Reihenfolge an.
    </p>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="flex min-h-14 flex-wrap items-center justify-center gap-2 rounded-2xl bg-black/[0.03] p-3"
        >
          <span
            class="text-sm text-ink-soft/60"
          >
            …
          </span>
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            a
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            s
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            M
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            u
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders bd from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welcher Buchstabe ist das?
    </p>
    <div
      class="flex justify-center"
    >
      <span
        class="font-display text-7xl font-bold text-ink"
      >
        d
      </span>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          b
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          d
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          p
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders build from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Buchstabiere das Wort!
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex justify-center text-6xl"
        >
          🐱
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold transition border-2 border-dashed border-black/20"
            disabled=""
            type="button"
          />
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold transition border-2 border-dashed border-black/20"
            disabled=""
            type="button"
          />
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold transition border-2 border-dashed border-black/20"
            disabled=""
            type="button"
          />
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold transition border-2 border-dashed border-black/20"
            disabled=""
            type="button"
          />
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold transition border-2 border-dashed border-black/20"
            disabled=""
            type="button"
          />
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold shadow-sm ring-1 transition bg-white text-ink ring-black/5 active:scale-95 hover:bg-black/[0.02]"
            type="button"
          >
            t
          </button>
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold shadow-sm ring-1 transition bg-white text-ink ring-black/5 active:scale-95 hover:bg-black/[0.02]"
            type="button"
          >
            K
          </button>
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold shadow-sm ring-1 transition bg-white text-ink ring-black/5 active:scale-95 hover:bg-black/[0.02]"
            type="button"
          >
            a
          </button>
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold shadow-sm ring-1 transition bg-white text-ink ring-black/5 active:scale-95 hover:bg-black/[0.02]"
            type="button"
          >
            z
          </button>
          <button
            class="flex h-14 w-11 items-center justify-center rounded-xl font-display text-xl font-bold shadow-sm ring-1 transition bg-white text-ink ring-black/5 active:scale-95 hover:bg-black/[0.02]"
            type="button"
          >
            e
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders case from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Groß oder klein geschrieben?
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="text-6xl"
      >
        🐶
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-2"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Hund
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          hund
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders count from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Wie viele Silben hat das Wort?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Sommer
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          2
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          3
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          4
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders gap from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welche Silbe fehlt?
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="flex flex-wrap items-center justify-center gap-1.5"
      >
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          Ba
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold min-w-10 bg-orange/15 text-orange-dark"
        >
           ? 
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          ne
        </span>
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          na
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          mo
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          le
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders initial from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Womit beginnt das Wort?
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="space-y-2 text-center"
      >
        <div
          class="text-6xl"
        >
          🍎
        </div>
        <p
          class="text-center font-display text-3xl font-bold text-ink"
        >
          Apfel
        </p>
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          A
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          E
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          O
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders letter from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welcher Buchstabe fehlt?
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="flex flex-wrap items-center justify-center gap-1.5"
      >
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          S
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          o
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold min-w-10 bg-orange/15 text-orange-dark"
        >
           ? 
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          n
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          e
        </span>
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          n
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          m
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          r
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders listen from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Wie viele Silben hörst du?
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <button
          aria-label="Nochmal anhören"
          class="mx-auto flex h-24 w-24 flex-col items-center justify-center gap-2 rounded-full bg-teal-tint text-teal-dark shadow-sm ring-1 ring-teal/20 transition active:scale-95 hover:bg-teal/10"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-volume2 lucide-volume-2 h-10 w-10"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
            />
            <path
              d="M16 9a5 5 0 0 1 0 6"
            />
            <path
              d="M19.364 18.364a9 9 0 0 0 0-12.728"
            />
          </svg>
          <span
            class="text-xs font-semibold"
          >
            Nochmal
          </span>
        </button>
        <div
          class="grid grid-cols-3 gap-3"
        >
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            2
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            3
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            4
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders nonsense from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Echtes Wort oder Quatschwort?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Lomp
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-2"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Echtes Wort
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Quatschwort
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders odd from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welches Wort reimt sich nicht?
    </p>
    <div>
      <div
        class="grid gap-3 grid-cols-2"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Haus
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Maus
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Baum
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Laus
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders order from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Tippe die Teile in der richtigen Reihenfolge an.
    </p>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="flex min-h-14 flex-wrap items-center justify-center gap-2 rounded-2xl bg-black/[0.03] p-3"
        >
          <span
            class="text-sm text-ink-soft/60"
          >
            …
          </span>
        </div>
        <div
          class="flex flex-wrap justify-center gap-2"
        >
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            ter
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            Schmet
          </button>
          <button
            class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            ling
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders pairs from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Finde die zwei Wörter, die sich reimen.
    </p>
    <div>
      <div
        class="grid grid-cols-2 gap-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Haus
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Tisch
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Maus
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Ball
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders rhyme from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Was reimt sich auf „Maus"?
    </p>
    <div
      class="flex justify-center"
    >
      <p
        class="text-center font-display text-3xl font-bold text-ink"
      >
        Maus
      </p>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Haus
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Tisch
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          Ball
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders sentence from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Tippe das Nomen (Hauptwort) an.
    </p>
    <div>
      <div
        class="flex flex-wrap items-baseline justify-center gap-x-2 gap-y-3 rounded-2xl bg-white px-6 py-8 shadow-sm ring-1 ring-black/5"
      >
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          Der
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          Hund
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          läuft
        </button>
        <button
          class="rounded-xl px-3 py-1.5 font-display text-2xl font-bold transition active:scale-95 text-ink hover:bg-teal-tint"
          type="button"
        >
          schnell
        </button>
        <span
          class="font-display text-2xl font-bold text-ink -ml-1.5"
        >
          .
        </span>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders swipe from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Wohin gehört das Wort?
    </p>
    <div>
      <div
        class="space-y-5"
      >
        <div
          class="flex items-center justify-center rounded-2xl bg-teal-tint px-8 py-6"
        >
          <p
            class="font-display text-4xl font-bold text-ink"
          >
            Sommer
          </p>
        </div>
        <div
          class="flex gap-3"
        >
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-left h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 18-6-6 6-6"
              />
            </svg>
            1 Silbe
          </button>
          <button
            class="flex flex-1 flex-col items-center justify-center gap-2 rounded-2xl px-4 py-6 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.97] bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
            2 Silben
          </button>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;

exports[`ExerciseView golden render > renders vowel from backend JSON 1`] = `
<div>
  <section
    class="space-y-6"
  >
    <p
      class="text-center font-medium text-ink-soft"
    >
      Welche Buchstaben fehlen?
    </p>
    <div
      class="flex justify-center"
    >
      <div
        class="flex flex-wrap items-center justify-center gap-1.5"
      >
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          L
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold min-w-10 bg-orange/15 text-orange-dark"
        >
           ? 
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          b
        </span>
        <span
          class="rounded-xl px-3 py-2 font-display text-xl font-bold bg-teal-tint text-teal-dark"
        >
          e
        </span>
      </div>
    </div>
    <div>
      <div
        class="grid gap-3 grid-cols-3"
      >
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          ie
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          ei
        </button>
        <button
          class="flex min-h-14 items-center justify-center rounded-2xl px-4 py-3 font-display text-lg font-bold shadow-sm ring-1 transition active:scale-[0.98] disabled:active:scale-100 bg-white text-ink ring-black/5 hover:bg-black/[0.02]"
          type="button"
        >
          eu
        </button>
      </div>
    </div>
    <div
      aria-live="polite"
      class="min-h-12 text-center"
    />
  </section>
</div>
`;
